# voipbill

./: .gitignore  CMakeLists.txt  Makefile  app_bill.conf  bill.pro  conf.sample  make.sh  test_run.sh  voipbill.cbp
app_auth/nbproject/: Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
app_bill/: conf.sample
app_bill/nbproject/: Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
docs/: 01-trunk-with-beam.txt
install/: install_test_server.sh
install/jenkins/: integration.sh  pull-request.sh
install/migrations/: add_credit_term.py  add_currency_rate_table.py  add_currency_to_regional_pricelist.py  add_min_margin_trunk_settings.py  cdr_auto_create.py  cdr_new_fields.py  cdr_unfinished.py  migrations.py  minimalki.py
install/sql/: 1-calls_raw_autocreate.sql  11-create_cdr_partition.sql  12-sig_call_id.sql  13-create_calls_raw_partition.sql  14-create_calls_cdr_partition.sql  16-calls_aggr_partition.sql  17-calls_aggr_partition_update.sql  18-add_cdr_check.sql  19-add_cdr_indexes.sql  2-create_calls_raw.sql  20-lite_count.sql  21-add_raw_indexes.sql  22-create_calls_cdr_partition.sql  23-add_unfinished_check.sql  24-add_unfinished_indexes.sql  25-1-auth_alter_table.sql  25-1-backlog_partition.sql  25-1-create_backlog.sh  25-2-auth_alter_table.sql  25-2-backlog_partition.sql  25-3-backlog_triggers.sql  25-4-backlog_undo.sql  25-country_code.sql  26-number_range_destination_view.sql  27-cental_base_calls_cdr_partitioning.sql  27-cental_base_calls_raw_partitioning.sql  27-event_management.sql  27-local_base_partitioning.sql  27-local_events.sql  28-alter_nnp_country.sql  29-create-report_order_table.sql  30-old_calls_raw_removes.sql  32-is_trigger_enabled.sql  4-insert_cdr_unfinished.sql  5-cdr_partitioning.sql  6-cdr_unfinished.sql  7-calls_cdr_tr_partitioning.sql  7-tr_partitoning_cdr_unfinished.sql  8-cental_base_calls_raw_partitioning.sql  9-local_base_calls_raw_partitioning.sql  (+1 more)
libs/: README
libs/ace-radius/: RadiusAttribute.cpp  RadiusAttribute.h  RadiusClientStack.cpp  RadiusPacket.cpp  RadiusPacket.h
migrations/nispd/: migrations.yml
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
rlm_mcn/: Makefile  Makefile.in  configure  configure.in  rlm_mcn.c
scripts/: .gitignore  CdrParser.py  CdrParser.sample.conf  Daemon.py  EmulateCall.py  EmulateCall.sample.conf  new_cdr_trigger.sql  syncstat  syncstat.py  syncstat_config.py  syncstat_config.py.sample  term_credit.sql  voipbillca.py  voipbillca.sample.conf
src/: BDb.cpp  BDb.h  BlackList.h  CalcBase.cpp  CalcBase.h  CalcFull.cpp  CalcFull.h  CallsSaver.h  Conf.cpp  Conf.h  DataLoader.h  KillCalls.h  Log.h  UdpControlClient.cpp  common.cpp  common.h  main.cpp
src-auth/: main.cpp
src-auth-client/: client.cpp  server.cpp
src-auth/classes/: AppAuth.cpp  AppAuth.h  BillClient.cpp  BillClient.h  ConfAuth.cpp  ConfAuth.h  ConfigVersionData.cpp  ConfigVersionData.h  Log.cpp  UdpMessageProcessor.cpp  UdpMessageProcessor.h  UdpServer.cpp  UdpServer.h
src-auth/dao/: ConfigVersionDao.h
src-auth/http/: file_handler.cpp  file_handler.hpp
src-auth/lists/: AirpList.cpp  AirpList.h  NumberList.cpp  NumberList.h  OperatorList.cpp  OperatorList.h  OperatorRuleList.cpp  OperatorRuleList.h  OutcomeList.cpp  OutcomeList.h  PrefixlistList.cpp  PrefixlistList.h  PrefixlistPrefixList.cpp  PrefixlistPrefixList.h  ReleaseReasonList.cpp  ReleaseReasonList.h  RouteCaseList.cpp  RouteCaseList.h  RouteTableList.cpp  RouteTableList.h  RouteTableRouteList.cpp  RouteTableRouteList.h  RoutingReportDataList.cpp  RoutingReportDataList.h  TrunkGroupList.cpp  TrunkGroupList.h  TrunkList.cpp  TrunkList.h
src-auth/models/: Airp.h  ConfigVersion.h  Number.h  Operator.h  OperatorRule.h  Outcome.h  Prefixlist.h  PrefixlistPrefix.h  ReleaseReason.h  RouteCase.h  RouteTable.h  RouteTableRoute.h  RoutingReportData.h  Trunk.h  TrunkGroup.h
src-auth/threads/: ThreadLoader.cpp  ThreadLoader.h  ThreadLog.cpp  ThreadSync.cpp  ThreadSync.h  ThreadTasks.cpp  ThreadUdpServer.cpp  ThreadUdpServer.h  ThreadWeb.cpp  ThreadWeb.h
src-bill/: common.cpp  common.h  main.cpp  version.cpp
src-bill/classes/: App.cpp  App.h  AppBill.cpp  AppBill.h  BDb.cpp  BDb.h  BDbResult.cpp  BDbResult.h  BaseLogWriter.cpp  BaseLogWriter.h  BillClient.cpp  BillClient.h  Billing.cpp  Billing.h  BillingCall.cpp  BillingCall.h  BillingCall_nnp.cpp  BillingCall_nnp.cpp.cpp  BlackList.cpp  BlackList.h  BlackListAntiFraudDisable.cpp  BlackListAntiFraudDisable.h  BlackListGlobal.cpp  BlackListGlobal.h  BlackListLocal.cpp  BlackListLocal.h  BlackListTrunk.cpp  BlackListTrunk.h  CalcBase.cpp  CalcBase.h  CalcException.cpp  CalcException.h  CalcFull.cpp  CalcFull.h  CallsList.cpp  CallsList.h  CallsManager.cpp  CallsManager.h  CallsSaver.cpp  CallsSaver.h  (+72 more)
src-bill/data/: ActiveCounterData.cpp  ActiveCounterData.h  AirpData.cpp  AirpData.h  BaseData.cpp  BaseData.h  ClientCounterData.cpp  ClientCounterData.h  ClientData.cpp  ClientData.h  ClientLockData.cpp  ClientLockData.h  CurrencyRateData.cpp  CurrencyRateData.h  CurrentCdrData.cpp  CurrentCdrData.h  DataBillingContainer.cpp  DataBillingContainer.h  DataContainer.cpp  DataContainer.h  DataCurrentCallsContainer.cpp  FminCounterData.cpp  (+89 more)
test-bill/: _test_base.py  app_bill.py  app_bill_template.conf  config.py  db_setup.py  model.py  openca.py  run.py  run_tests.py  sql_access.py  test_billing.py  unittestgui.py
tests/: README  comparative_test.py  compile.sh  create_schema.sh  fill_data.sh  make_configs.py  migrate_configs.py  migrate_db.py  pr_test.py  regions-list  reset_counters.sh  run.sh  run_comparative_tests.sh  run_pr_tests.sh  sampler.py  sampler_newpackages.py  stop.sh  switch_repo_back.sh  switch_repo_to_tested.sh
utils/: 00_drop_all_test_db.sh  10_make_db_dumps.sh  20_create_db_load_test_data.sh  30_do_sync_maindb_to_regdb.sh  31_cdr_dump_load_to_testdb.sg  make_db_migration.sh  read.me  reg40.sql  regions-list
(+865 files in other folders)
